Preserve IDN action link hosts
Convert internationalized action-link hosts to punycode while continuing to drop truncated single-label hosts.